getClusters: Make matchkeyid a required parameter (#20)
getClusters: Make matchkeyid a required parameter

And return 404 if it doesn't exist - rather than just getting
an empty response.

Common matchkey not found handling
