# server/src/main/java/org/folio/shared/index/api/SharedIndexService.java
@@ -56,6 +56,8 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     pgCqlQuery.addField(
         new PgCqlField("id", PgCqlField.Type.UUID));
     pgCqlQuery.addField(
+        new PgCqlField("id", "globalId", PgCqlField.Type.UUID));
+    pgCqlQuery.addField(
         new PgCqlField("local_id", "localId", PgCqlField.Type.TEXT));
     pgCqlQuery.addField(
         new PgCqlField("source_id", "sourceId", PgCqlField.Type.UUID));
@@ -104,6 +106,10 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
         .mapEmpty();
   }
 
+  void matchKeyNotFound(RoutingContext ctx, String id) {
+    HttpResponse.responseError(ctx, 404, "MatchKey " + id + " not found");
+  }
+
   Future<Void> getClusters(RoutingContext ctx) {
     PgCqlQuery pgCqlQuery = createPgCqlQuery();
     pgCqlQuery.addField(
@@ -115,8 +121,14 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     pgCqlQuery.parse(getQueryParameter(params));
     String matchKeyId = getParameterString(params.queryParameter("matchkeyid"));
     Storage storage = new Storage(ctx);
-    return storage.getClusters(ctx, matchKeyId,
-        pgCqlQuery.getWhereClause(), pgCqlQuery.getOrderByClause());
+    return storage.selectMatchKeyConfig(matchKeyId).compose(conf -> {
+      if (conf == null) {
+        matchKeyNotFound(ctx, matchKeyId);
+        return Future.succeededFuture();
+      }
+      return storage.getClusters(ctx, matchKeyId,
+          pgCqlQuery.getWhereClause(), pgCqlQuery.getOrderByClause());
+    });
   }
 
   Future<Void> getCluster(RoutingContext ctx) {
@@ -164,7 +176,7 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     return storage.selectMatchKeyConfig(id)
         .onSuccess(res -> {
           if (res == null) {
-            HttpResponse.responseError(ctx, 404, "MatchKey " + id + " not found");
+            matchKeyNotFound(ctx, id);
             return;
           }
           HttpResponse.responseJson(ctx, 200).end(res.encode());
@@ -182,7 +194,7 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     return storage.updateMatchKeyConfig(id, method, params, update)
         .onSuccess(res -> {
           if (Boolean.FALSE.equals(res)) {
-            HttpResponse.responseError(ctx, 404, "MatchKey " + id + " not found");
+            matchKeyNotFound(ctx, id);
             return;
           }
           ctx.response().setStatusCode(204).end();
@@ -197,7 +209,7 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     return storage.deleteMatchKeyConfig(id)
         .onSuccess(res -> {
           if (Boolean.FALSE.equals(res)) {
-            HttpResponse.responseError(ctx, 404, "MatchKey " + id + " not found");
+            matchKeyNotFound(ctx, id);
             return;
           }
           ctx.response().setStatusCode(204).end();
@@ -227,7 +239,7 @@ public class SharedIndexService implements RouterCreator, TenantInitHooks {
     return storage.initializeMatchKey(id)
         .onSuccess(res -> {
           if (res == null) {
-            HttpResponse.responseError(ctx, 404, "MatchKey " + id + " not found");
+            matchKeyNotFound(ctx, id);
             return;
           }
           HttpResponse.responseJson(ctx, 200).end(res.encode());
